syntax = "proto3";
package game;

service GameService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message HelloRequest {
  string player_name = 1;
}

message HelloResponse {
  string greeting = 1;
}

message PingRequest {}

message PingResponse {
  int64 server_time_ms = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string player_id = 2;
  string error_message = 3;
}
